# cryptol

./: .appveyor.yml  .dockerignore  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ConditionalConstraints.md  Dockerfile  HACKING.md  HoleStatus.txt  LICENSE  LICENSE.rtf  LiteralSampling.md  Makefile  README.md  Setup.hs  __init__.py  cabal.GHC-8.10.1.config  cabal.GHC-8.10.2.config  cabal.GHC-8.10.3.config  cabal.GHC-8.10.4.config  cabal.GHC-8.10.5.config  cabal.GHC-8.10.7.config  cabal.GHC-8.4.4.config  cabal.GHC-8.6.5.config  cabal.GHC-8.8.3.config  cabal.GHC-8.8.4.config  cabal.GHC-9.0.2.config  cabal.GHC-9.10.3.config  cabal.GHC-9.12.2.config  cabal.GHC-9.2.2.config  cabal.GHC-9.2.4.config  cabal.GHC-9.2.8.config  cabal.GHC-9.4.4.config  cabal.GHC-9.4.5.config  cabal.GHC-9.4.7.config  (+31 more)
ICryptol/: ICryptol.cabal  LICENSE.rtf  Makefile  cabal.config  cryptolmagic.py  icryptol
ICryptol/profile_cryptol/: ipython_config.py
ICryptol/src/: Main_notebook.hs  Notebook.hs
ICryptol/win32/: ICryptol.wxs
cryptol-remote-api/: CHANGELOG.md  Dockerfile  LICENSE  README.rst  build_and_test_docker.sh  check_docs.sh  cryptol-remote-api.cabal  ghc-portability.patch  run_rpc_tests.sh  server-not-threaded.patch  test-cryptol-remote-api.py  test.Dockerfile  test_docker.sh  update_docs.sh
cryptol-remote-api/cryptol-eval-server/: Main.hs  README.txt
cryptol-remote-api/cryptol-remote-api/: Main.hs
cryptol-remote-api/docs/: .gitignore  Cryptol.rst  Errors.rst  Makefile  conf.py  index.rst  old-Cryptol.rst
cryptol-remote-api/python/: .gitignore  CHANGELOG.md  GettingStarted.md  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
cryptol-remote-api/src/: CryptolServer.hs
cryptol-remote-api/test/: Dockerfile  Test.hs  run_rpc_tests.sh
cryptol-remote-api/test-scripts/: Dockerfile  Foo.cry  cryptol-api_test.py  cryptol-tests.py  eval-server-test.py  test-cryptol-remote-api.py
language-server/: .gitignore  CHANGELOG.md  LICENSE  README  build  cryptol-language-server.cabal  language-server.code-workspace
language-server/client/: .vscodeignore  CHANGELOG  CHANGELOG.md  README  README.md  client.code-workspace  esbuild.js  eslint.config.mjs  language-configuration.json  package-lock.json  package.json  tsconfig.json
language-server/server/: Commands.hs  Config.hs  Definitions.hs  Error.hs  Handlers.hs  Hover.hs  Index.hs  Load.hs  Main.hs  Monad.hs  Position.hs  State.hs  SyntaxHighlight.hs
rme/: LICENSE  README.md  rme.cabal
tests/: .gitignore  Main.hs  README  cryptol-test-runner.cabal
tests/constraint-guards/: Inits.cry  Len.cry  Mergesort.cry  Parsing.cry  Test1.cry  Test2.cry  Test3.cry  Test4.cry  Uncons.cry  constant.cry  constant.icry  constant.icry.stdout  inits.cry  inits.icry  inits.icry.stdout  insert.cry  insert.icry  insert.icry.stdout  len.cry  len.icry  len.icry.stdout  mergesort.cry  mergesort.icry  mergesort.icry.stdout  nestFun.cry  nestFun.icry  nestFun.icry.stdout  nestMod.cry  nestMod.icry  nestMod.icry.stdout  noNested.cry  noNested.icry  noNested.icry.stdout  noPrim.cry  noPrim.icry  noPrim.icry.stdout  noTypeSig.cry  noTypeSig.icry  noTypeSig.icry.stdout  noTypeSigNested.cry  (+14 more)
tests/cryptol_eval/: test_basics.py
tests/deriving/: deriving-enums.cry  deriving-enums.icry  deriving-enums.icry.stdout  deriving-newtypes.cry  deriving-newtypes.icry  deriving-newtypes.icry.stdout  deriving-parse-app.cry  deriving-parse-app.icry  deriving-parse-app.icry.stdout  deriving-parse-empty.cry  deriving-parse-empty.icry  deriving-parse-empty.icry.stdout  deriving-parse-multiple.cry  deriving-parse-multiple.icry  deriving-parse-multiple.icry.stdout  deriving-parse-unparenthesized.cry  deriving-parse-unparenthesized.icry  deriving-parse-unparenthesized.icry.stdout  deriving-tc-disallowed.cry  deriving-tc-disallowed.icry  deriving-tc-disallowed.icry.stdout  deriving-tc-duplicate.cry  deriving-tc-duplicate.icry  deriving-tc-duplicate.icry.stdout  deriving-tc-superclass.cry  deriving-tc-superclass.icry  deriving-tc-superclass.icry.stdout  deriving-tc-unsolvable.cry  deriving-tc-unsolvable.icry  deriving-tc-unsolvable.icry.stdout
tests/docstrings/: T01.cry  T01.icry  T01.icry.stdout  T02.cry  T02.icry  T02.icry.stdout  T03.cry  T03.icry  T03.icry.stdout  T04.cry  T04.icry  T04.icry.stdout  T05.icry  T05.icry.stdout  T05.md  T06.cry  T06.icry  T06.icry.stdout  T07.cry  T07.icry  T07.icry.stdout  T07F.cry  T08.cry  T08.icry  T08.icry.stdout  T09.cry  T09.icry  T09.icry.stdout  T10.cry  T10.icry  T10.icry.stdout  T11.cry  T11.icry  T11.icry.stdout  T12.cry  T12.icry  T13.cry  T13.icry  T13.icry.stdout  T13.saw  (+9 more)
tests/enum/: BasicEnums.cry  BasicEnums.icry  BasicEnums.icry.stdout  CaseAmbiguousType.cry  CaseAmbiguousType.icry  CaseAmbiguousType.icry.stdout  CheckEnum.icry  CheckEnum.icry.stdout  CheckEnumPartialError.cry  CheckEnumPartialError.icry  CheckEnumPartialError.icry.stdout  CheckProveEnum.cry  CheckProveEnum.icry  CheckProveEnum.icry.stdout  EnumShadowError.cry  EnumShadowError.icry  EnumShadowError.icry.stdout  NestedPat1.cry  NestedPat1.icry  NestedPat1.icry.stdout  OverlappingConstructors.cry  OverlappingConstructors.icry  OverlappingConstructors.icry.stdout  OverlappingDefault.cry  OverlappingDefault.icry  OverlappingDefault.icry.stdout  RecEnum.cry  RecEnum.icry  RecEnum.icry.stdout  RepeatedConstructors1.cry  RepeatedConstructors1.icry  RepeatedConstructors1.icry.stdout  RepeatedConstructors2.cry  RepeatedConstructors2.icry  RepeatedConstructors2.icry.stdout  RepeatedConstructors3.cry  RepeatedConstructors3.icry  RepeatedConstructors3.icry.stdout  RepeatedConstructors4.cry  RepeatedConstructors4.icry  (+5 more)
tests/examples/: allexamples.icry  allexamples.icry.stdout  allexamples.icry.stdout.mingw32
tests/ffi/: Makefile  ffi-fallback-rec.icry.stdout  ffi-fallback-rec.icry.stdout.darwin  ffi-fallback.cry  ffi-fallback.icry.stdout  ffi-header.icry  ffi-header.icry.stdout  ffi-no-dup.cry  ffi-no-dup.icry  ffi-no-dup.icry.stdout  ffi-no-functor.icry  ffi-no-functor.icry.stdout  (+20 more)
(+2051 files in other folders)
