Name:                ICryptol
Version:             2.1.0
Synopsis:            ICryptol: An IPython-style interface for Cryptol
License:             BSD3
Author:              Galois, Inc.
Maintainer:          cryptol@galois.com
Copyright:           2013-2015 Galois Inc.
Category:            Language
Build-type:          Simple
Cabal-version:       >= 1.18

flag static
  default: False
  description: Create a statically-linked binary

executable icryptol-kernel
  Default-language:
    Haskell2010
  Main-is:             Main_notebook.hs
  hs-source-dirs:      src
  other-modules:       Notebook
  build-depends:       base
                     , containers
                     , cryptol
                     , ipython-kernel >= 0.3
                     , text
                     , transformers
  GHC-options:         -Wall -O2

  if os(linux) && flag(static)
      ld-options:      -static -pthread
